...
                android:id="@+id/typeDecompte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/editTextNom"
                android:ems="10"
                app:met_floatingLabelTextColor="@color/colorTextDark"
                android:inputType="textPersonName|textAutoComplete"
                app:met_floatingLabel="highlight"
                app:met_textColor="@color/colorTextDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Nom"
                app:met_textColorHint="@color/colorHint"
                />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/editTextPrenom"
                android:ems="10"
                android:inputType="textPersonName|textAutoComplete"
                app:met_floatingLabel="highlight"
                app:met_textColor="@color/colorTextDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Prenom"
                app:met_textColorHint="@color/colorHint"
                app:met_floatingLabelTextColor="@color/colorFloatingLable"
                />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/editTextEmail"
                android:ems="10"
                app:met_floatingLabelTextColor="@color/colorTextDark"
                android:inputType="textAutoComplete|textEmailAddress"
                app:met_floatingLabel="highlight"
                app:met_textColor="@color/colorTextDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Courriel"
                app:met_textColorHint="@color/colorHint"
                />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/mdp"
                android:ems="10"
                app:met_floatingLabelTextColor="@color/colorTextDark"
                android:inputType="textPassword"
                app:met_floatingLabel="highlight"
                app:met_textColor="@color/colorTextDark"
                android:layout_width="match_parent"
...
                app:met_helperText="Le mot de passe doit contenir de chiffres et des lettres."
                app:met_helperTextColor="@color/colorHelper"
                app:met_helperTextAlwaysShown="true"
                />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/confmdp"
                android:ems="10"
                app:met_floatingLabelTextColor="@color/colorTextDark"
                android:inputType="textPassword"
                app:met_floatingLabel="highlight"
                app:met_textColor="@color/colorTextDark"
                android:layout_width="match_parent"
...
                app:met_textColorHint="@color/colorHint"
                app:met_helperText="Le mot de passe doit contenir de chiffres et des lettres."
                app:met_helperTextColor="@color/colorHelper"
                app:met_helperTextAlwaysShown="true"
                />
            <Button
            android:id="@+id/btnContinuer"
            android:background="#009688"
            android:textColor="@color/colorBtnText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="Register" />
...
